1.0.0 to 1.1.0
----------------------------------------------------------------------
- Modified eventconf.xml to allow for event definition files to be
  included using the <event-file> tag.
- Added a Threshold Rearm event for both Low and High Thresholds.
- Added an Admin GUI page for deleting nodes
- Added the ability to select which non-IP interfaces would be 
  scheduled for data collection, and built an Admin WebUI page
  to configure it.
- Loopback interfaces will now be discovered, and are preferred
  as the Primary SNMP interface. Applies to non-127.*.*.*
  interfaces only.
- fixed issue with capsd pulling all of the ifTable for interface.
  Could cause issues with some HP switches.
- Bug 664: Notifications not filtering on services.
- Bug 666: Generic SNMP Traps are hard-coded and cannot be 
  managed via eventconf.xml. This fix also included a change
  that fixes and enforces the order of events in eventconf.xml.
  Care must be taken so that the most specific mask matches are
  listed  before more generic ones. But this fix insures that the
  correct wildcards and exact matches work as ordered.
- Fixed a NullPointer exception when deleting a node due to a
  poller downtime model.
- fixed bug with Admin/Oper status types causing exception
- removed duplicate listings for LDAP and Citrix in capsd config
- fixed bug with rescans on certain devices (net-snmp on MACOSX)
- fixed bug to allow threshold events to cause notifications
- included workaround to handle eventconf.xml issues
- added numerous updates to datacollection-config.xml and
  snmp-graph.properties.xml
- added a contrib directory and Tomas Carlsson mib2opennms program


0.9.9 to 1.0.0
----------------------------------------------------------------------
- reporting bugfixes
- the "OpenSSH" service is now "SSH", to catch commercial SSH servers
  as well
- capsd "url" tag changed to "include-url" for including a file for
  capability checks
- HTTPS was missing from the "web servers" category